Excluding "not_valid" records

--- a/Investigation/HowManyNutrientLabelAreSameAsBefore.ipynb
+++ b/Investigation/HowManyNutrientLabelAreSameAsBefore.ipynb
@@ -133,25 +133,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Making request for URL: https://redsky.target.com/redsky_aggregations/v1/web/pdp_client_v1?key=9f36aeafbe60771e321a7cc95a78140772ab3e96&tcin=396785612&is_bot=false&pricing_store_id=3324&visitor_id=019347C3E9160201A06B297D0CC373F6\n",
-      "Request failed for URL https://redsky.target.com/redsky_aggregations/v1/web/pdp_client_v1?key=9f36aeafbe60771e321a7cc95a78140772ab3e96&tcin=396785612&is_bot=false&pricing_store_id=3324&visitor_id=019347C3E9160201A06B297D0CC373F6 with status code: 404\n",
-      "{}\n"
+      "Making request for URL: https://redsky.target.com/redsky_aggregations/v1/web/pdp_client_v1?key=9f36aeafbe60771e321a7cc95a78140772ab3e96&tcin=81995864&is_bot=false&pricing_store_id=3324&visitor_id=019347C3E9160201A06B297D0CC373F6\n",
+      "[{'name': 'Total Fat', 'percentage': 3.0, 'quantity': 2.0, 'unit_of_measurement': 'grm'}, {'name': 'Saturated Fat', 'percentage': 0.0, 'quantity': 0.0, 'unit_of_measurement': 'grm'}, {'name': 'Trans Fat', 'percentage': 0.0, 'quantity': 0.0, 'unit_of_measurement': 'grm'}, {'name': 'Cholesterol', 'percentage': 0.0, 'quantity': 0.0, 'unit_of_measurement': 'mg'}, {'name': 'Sodium', 'percentage': 10.0, 'quantity': 220.0, 'unit_of_measurement': 'mg'}, {'name': 'Total Carbohydrate', 'percentage': 1.0, 'quantity': 2.0, 'unit_of_measurement': 'grm'}, {'name': 'Dietary Fiber', 'percentage': 7.0, 'quantity': 2.0, 'unit_of_measurement': 'grm'}, {'name': 'Total Sugars', 'percentage': 0.0, 'quantity': 1.0, 'unit_of_measurement': 'grm'}, {'name': 'Added Sugars', 'percentage': 0.0, 'quantity': 0.0, 'unit_of_measurement': 'grm'}, {'name': 'Protein', 'percentage': 24.0, 'quantity': 16.0, 'unit_of_measurement': 'grm'}, {'name': 'Vitamin D', 'percentage': 0.0, 'quantity': 0.0, 'unit_of_measurement': 'mcg'}, {'name': 'Calcium', 'percentage': 2.0, 'quantity': 30.0, 'unit_of_measurement': 'mg'}, {'name': 'Iron', 'percentage': 30.0, 'quantity': 5.6, 'unit_of_measurement': 'mg'}, {'name': 'Potassium', 'percentage': 2.0, 'quantity': 120.0, 'unit_of_measurement': 'mg'}, {'name': 'Calories', 'percentage': 0.0, 'quantity': 90.0, 'unit_of_measurement': 'kcal'}]\n",
+      "{'Total Fat': {'quantity': 2.0, 'unit_of_measurement': 'grm'}, 'Saturated Fat': {'quantity': 0.0, 'unit_of_measurement': 'grm'}, 'Trans Fat': {'quantity': 0.0, 'unit_of_measurement': 'grm'}, 'Cholesterol': {'quantity': 0.0, 'unit_of_measurement': 'mg'}, 'Sodium': {'quantity': 220.0, 'unit_of_measurement': 'mg'}, 'Total Carbohydrate': {'quantity': 2.0, 'unit_of_measurement': 'grm'}, 'Dietary Fiber': {'quantity': 2.0, 'unit_of_measurement': 'grm'}, 'Total Sugars': {'quantity': 1.0, 'unit_of_measurement': 'grm'}, 'Added Sugars': {'quantity': 0.0, 'unit_of_measurement': 'grm'}, 'Protein': {'quantity': 16.0, 'unit_of_measurement': 'grm'}, 'Vitamin D': {'quantity': 0.0, 'unit_of_measurement': 'mcg'}, 'Calcium': {'quantity': 30.0, 'unit_of_measurement': 'mg'}, 'Iron': {'quantity': 5.6, 'unit_of_measurement': 'mg'}, 'Potassium': {'quantity': 120.0, 'unit_of_measurement': 'mg'}, 'Calories': {'quantity': 90.0, 'unit_of_measurement': 'kcal'}}\n",
+      "Making request for URL: https://redsky.target.com/redsky_aggregations/v1/web/pdp_client_v1?key=9f36aeafbe60771e321a7cc95a78140772ab3e96&tcin=13022348&is_bot=false&pricing_store_id=3324&visitor_id=019347C3E9160201A06B297D0CC373F6\n",
+      "Request failed for URL https://redsky.target.com/redsky_aggregations/v1/web/pdp_client_v1?key=9f36aeafbe60771e321a7cc95a78140772ab3e96&tcin=13022348&is_bot=false&pricing_store_id=3324&visitor_id=019347C3E9160201A06B297D0CC373F6 with status code: 404\n",
+      "Making request for URL: https://redsky.target.com/redsky_aggregations/v1/web/pdp_client_v1?key=9f36aeafbe60771e321a7cc95a78140772ab3e96&tcin=12945568&is_bot=false&pricing_store_id=3324&visitor_id=019347C3E9160201A06B297D0CC373F6\n",
+      "Request failed for URL https://redsky.target.com/redsky_aggregations/v1/web/pdp_client_v1?key=9f36aeafbe60771e321a7cc95a78140772ab3e96&tcin=12945568&is_bot=false&pricing_store_id=3324&visitor_id=019347C3E9160201A06B297D0CC373F6 with status code: 404\n",
+      "wm_396785612\n",
+      "wf_bear-mango-apple-sour-yoyos-5-count-638d97\n",
+      "{'81995864': {'Total Fat': {'quantity': 2.0, 'unit_of_measurement': 'grm'}, 'Saturated Fat': {'quantity': 0.0, 'unit_of_measurement': 'grm'}, 'Trans Fat': {'quantity': 0.0, 'unit_of_measurement': 'grm'}, 'Cholesterol': {'quantity': 0.0, 'unit_of_measurement': 'mg'}, 'Sodium': {'quantity': 220.0, 'unit_of_measurement': 'mg'}, 'Total Carbohydrate': {'quantity': 2.0, 'unit_of_measurement': 'grm'}, 'Dietary Fiber': {'quantity': 2.0, 'unit_of_measurement': 'grm'}, 'Total Sugars': {'quantity': 1.0, 'unit_of_measurement': 'grm'}, 'Added Sugars': {'quantity': 0.0, 'unit_of_measurement': 'grm'}, 'Protein': {'quantity': 16.0, 'unit_of_measurement': 'grm'}, 'Vitamin D': {'quantity': 0.0, 'unit_of_measurement': 'mcg'}, 'Calcium': {'quantity': 30.0, 'unit_of_measurement': 'mg'}, 'Iron': {'quantity': 5.6, 'unit_of_measurement': 'mg'}, 'Potassium': {'quantity': 120.0, 'unit_of_measurement': 'mg'}, 'Calories': {'quantity': 90.0, 'unit_of_measurement': 'kcal'}}}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{}"
+       "{'81995864': {'Total Fat': {'quantity': 2.0, 'unit_of_measurement': 'grm'},\n",
+       "  'Saturated Fat': {'quantity': 0.0, 'unit_of_measurement': 'grm'},\n",
+       "  'Trans Fat': {'quantity': 0.0, 'unit_of_measurement': 'grm'},\n",
+       "  'Cholesterol': {'quantity': 0.0, 'unit_of_measurement': 'mg'},\n",
+       "  'Sodium': {'quantity': 220.0, 'unit_of_measurement': 'mg'},\n",
+       "  'Total Carbohydrate': {'quantity': 2.0, 'unit_of_measurement': 'grm'},\n",
+       "  'Dietary Fiber': {'quantity': 2.0, 'unit_of_measurement': 'grm'},\n",
+       "  'Total Sugars': {'quantity': 1.0, 'unit_of_measurement': 'grm'},\n",
+       "  'Added Sugars': {'quantity': 0.0, 'unit_of_measurement': 'grm'},\n",
+       "  'Protein': {'quantity': 16.0, 'unit_of_measurement': 'grm'},\n",
+       "  'Vitamin D': {'quantity': 0.0, 'unit_of_measurement': 'mcg'},\n",
+       "  'Calcium': {'quantity': 30.0, 'unit_of_measurement': 'mg'},\n",
+       "  'Iron': {'quantity': 5.6, 'unit_of_measurement': 'mg'},\n",
+       "  'Potassium': {'quantity': 120.0, 'unit_of_measurement': 'mg'},\n",
+       "  'Calories': {'quantity': 90.0, 'unit_of_measurement': 'kcal'}}}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +233,7 @@
     "    \n",
     "    for product_id in original_ids:\n",
     "        \n",
-    "        if product_id.startswith(\"tg\"):\n",
+    "        if not product_id.startswith(\"tg\"):\n",
     "            print(product_id)\n",
     "            continue\n",
     "        new_id = product_id[3:]\n",
@@ -232,30 +253,6 @@
     "\n",
     "fetch_nutritional_values()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(nutritional_values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
