--- a/Local/transferDataForLocalDevelopment.ipynb
+++ b/Local/transferDataForLocalDevelopment.ipynb
@@ -2,13 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully transferred 100 records.\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "import pymongo\n",
     "import random\n",
@@ -23,7 +27,10 @@
     "        source_db = source_client[source_db]\n",
     "        source_col = source_db[source_collection]\n",
     "\n",
-    "        all_docs = list(source_col.find({}, {\"_id\": 0}))  # Excluding _id to avoid conflicts\n",
+    "        all_docs = list(source_col.find(\n",
+    "            {\"harmonized single category\": {\"$ne\": \"not_valid\"}}, \n",
+    "            {\"_id\": 0}  # Exclude _id to avoid conflicts\n",
+    "        ))\n",
     "        if len(all_docs) < 100:\n",
     "            raise ValueError(\"Source collection has less than 100 records.\")\n",
     "\n",
@@ -61,11 +68,32 @@
     ")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
